--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,6 +31,7 @@
 
     <group>
         <item
+            android:checkableBehavior="single"
             android:icon="@drawable/user_green"
             android:title="@string/setting" />
 
@@ -51,6 +52,7 @@
             android:title="@string/termsncondtion" />
 
         <item
+            android:id="@+id/logout"
             android:icon="@drawable/logout"
             android:title="@string/logout" />
 
