--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="addmoneyviewmodel"
             type="com.example.spidpay.ui.spwallet.AddMoneyViewModel" />
@@ -12,6 +13,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="#10D1D1D1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.tradewallet.TransferMoneyActivity">
@@ -65,125 +67,242 @@
 
         </androidx.cardview.widget.CardView>
 
-        <!--<TextView
-            android:id="@+id/tv_transfermoney_option"
+        <RelativeLayout
+            android:id="@+id/trade_total_balance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:background="#ECF1FA"
+            android:paddingTop="@dimen/marign20dp"
+            android:paddingBottom="@dimen/marign20dp"
+            android:textSize="@dimen/marign18sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/carview_header">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/totalbalnce"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/totalbalnce"
+                android:textColor="@color/green" />
+
+
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/tv_transferfor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
             android:fontFamily="@font/lato_bold"
-            android:text="@string/chooseoption"
+            android:text="@string/transferto"
             android:textColor="@color/black"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/carview_header" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/trade_total_balance" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/trade_trasfer_for"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/marign20dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_transferfor">
+
+
+            <RelativeLayout
+                android:id="@+id/sp_wallet"
+                android:layout_width="@dimen/marign100dp"
+                android:layout_height="75dp"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_weight="1"
+                android:background="@drawable/trade_wallet_green"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="82dp"
+                    android:layout_height="52dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_speedpaywallet" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/paytm_wallet"
+                android:layout_width="@dimen/marign100dp"
+                android:layout_height="75dp"
+                android:layout_weight="1"
+                android:background="@drawable/trade_wallet_grey"
+                app:layout_constraintEnd_toStartOf="@+id/bank_transfer"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/sp_wallet"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="82dp"
+                    android:layout_height="52dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_paytm" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/bank_transfer"
+                android:layout_width="@dimen/marign100dp"
+                android:layout_height="75dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:background="@drawable/trade_wallet_grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="82dp"
+                    android:layout_height="78dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_bank" />
+
+            </RelativeLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tv_amount_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/amoutdetail"
+            android:textColor="@color/black"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/trade_trasfer_for" />
+
 
         <RadioButton
-            android:id="@+id/rb_transfertowallet"
+            android:id="@+id/rb_full_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
-            android:checked="@={addmoneyviewmodel.transfer_spid_wallet}"
-            android:onClick="@{()->addmoneyviewmodel.onTransferToSPClick()}"
             android:layout_marginTop="@dimen/marign20dp"
+            android:buttonTint="@color/green"
             android:fontFamily="@font/lato_bold"
-            android:text="@string/transfertospidwallet"
-            android:textColor="@color/black"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/tv_transfermoney_option" />
-
-        <EditText
-            android:id="@+id/edt_amount_spidwallet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
-            android:layout_weight="1"
-            android:background="@drawable/edittext_shadow"
-            android:hint="@string/enteramount"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
-            android:textColorHint="@color/lightgrey"
-            app:layout_constraintTop_toBottomOf="@+id/rb_transfertowallet" />
-
+            android:text="@string/fullamount"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_amount_detail" />
 
         <RadioButton
-            android:id="@+id/rb_transfertobank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/marign40dp"
             android:layout_marginTop="@dimen/marign20dp"
+            android:buttonTint="@color/green"
             android:fontFamily="@font/lato_bold"
-            android:text="@string/tranfertobank"
-            android:onClick="@{()->addmoneyviewmodel.onTransferToBank()}"
-            android:checked="@={addmoneyviewmodel.transfer_to_bank}"
-            android:textColor="@color/black"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/edt_amount_spidwallet" />
+            android:text="@string/otheramount"
+            app:layout_constraintLeft_toRightOf="@+id/rb_full_amount"
+            app:layout_constraintTop_toBottomOf="@+id/tv_amount_detail" />
 
-
-
-        <EditText
-            android:id="@+id/edt_amount_transferbank"
+        <RelativeLayout
+            android:id="@+id/relative_transfer_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
-            android:layout_weight="1"
-            android:background="@drawable/edittext_shadow"
-            android:hint="@string/enteramount"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
-            android:textColorHint="@color/lightgrey"
-            app:layout_constraintTop_toBottomOf="@+id/rb_transfertobank" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rb_full_amount">
 
+            <TextView
+                android:id="@+id/tv_transfer_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/transfer_amount"
+                android:textColor="@color/black"
+                app:layout_constraintHorizontal_chainStyle="spread" />
 
-        <EditText
-            android:id="@+id/edt_transferwallet_notes"
+            <EditText
+                android:id="@+id/edt_tranfer_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign10dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginBottom="@dimen/marign10dp"
+                android:layout_toEndOf="@+id/tv_transfer_amount"
+                android:background="@drawable/transfer_money_bg"
+                android:paddingStart="@dimen/marign10dp"
+                android:paddingTop="@dimen/marign10dp"
+                android:paddingBottom="@dimen/marign10dp"
+                android:text="21000" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relative_service_charger"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
-            android:layout_weight="1"
-            android:background="@drawable/edittext_shadow"
-            android:hint="@string/notes"
-            android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
-            android:text="@={addmoneyviewmodel.online_notes}"
-            android:textColorHint="@color/lightgrey"
-            app:layout_constraintTop_toBottomOf="@+id/edt_amount_transferbank"
-            android:importantForAutofill="no" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relative_transfer_amount">
 
+            <TextView
+                android:id="@+id/tv_service_charge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/transfer_amount"
+                android:textColor="@color/black"
+                app:layout_constraintHorizontal_chainStyle="spread" />
 
+            <TextView
+                android:id="@+id/tv_service_charge_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign10dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginBottom="@dimen/marign10dp"
+                android:layout_toEndOf="@+id/tv_service_charge"
+                android:paddingTop="@dimen/marign10dp" />
+
+        </RelativeLayout>
 
         <Button
-            android:id="@+id/btn_proceed"
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginBottom="@dimen/marign20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
-            android:text="@string/transfer"
-            android:textAllCaps="false"
+            android:text="@string/submit"
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
-            app:layout_constraintTop_toBottomOf="@+id/edt_transferwallet_notes" />
--->
+            app:layout_constraintTop_toBottomOf="@+id/relative_service_charger" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
