--- a/app/src/main/res/layout/landingfragment.xml
+++ b/app/src/main/res/layout/landingfragment.xml
@@ -92,7 +92,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:contentDescription="TODO"
-                        android:onClick="@{(v)->landingviewmodel.openAllTransactionAcivity(v,wallet.get(1).walletId,wallet.get(1).walletBalance,`SP`)}"
+                        android:onClick="@{(v)->landingviewmodel.openAllTransactionAcivity(v,wallet.get(1).walletId,wallet.get(1).walletBalance,`SP`,false)}"
                         android:src="@drawable/ic_baseline_arrow_forward_24" />
 
 
@@ -147,7 +147,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:contentDescription="TODO"
-                        android:onClick="@{(v)->landingviewmodel.openAllTransactionAcivity(v,wallet.get(0).walletId,wallet.get(0).walletBalance,`Trade`)}"
+                        android:onClick="@{(v)->landingviewmodel.openAllTransactionAcivity(v,wallet.get(0).walletId,wallet.get(0).walletBalance,`Trade`,true)}"
                         android:src="@drawable/ic_baseline_arrow_forward_24" />
 
                 </RelativeLayout>
@@ -202,22 +202,22 @@
                                 android:layout_centerHorizontal="true">
 
                                 <ImageView
+                                    android:id="@+id/img_dmt"
                                     android:layout_width="@dimen/marign45dp"
                                     android:layout_height="53dp"
-                                    android:id="@+id/img_dmt"
                                     android:layout_gravity="center"
                                     android:contentDescription="@string/image"
                                     android:src="@drawable/dmt_icon" />
 
                                 <TextView
-                                    android:textSize="@dimen/marign18sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/img_dmt"
                                     android:layout_marginTop="@dimen/marign10dp"
                                     android:fontFamily="@font/lato_bold"
                                     android:text="@string/dmt"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/marign18sp" />
 
                             </RelativeLayout>
 
@@ -245,9 +245,9 @@
                                 android:layout_centerInParent="true">
 
                                 <ImageView
+                                    android:id="@+id/img_aadhar"
                                     android:layout_width="@dimen/marign45dp"
                                     android:layout_height="53dp"
-                                    android:id="@+id/img_aadhar"
                                     android:layout_centerHorizontal="true"
                                     android:contentDescription="@string/image"
                                     android:src="@drawable/aeps_icon" />
@@ -260,8 +260,8 @@
                                     android:layout_marginTop="@dimen/marign10dp"
                                     android:fontFamily="@font/lato_bold"
                                     android:text="@string/Aeps"
-                                    android:textSize="@dimen/marign18sp"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/marign18sp" />
 
                             </RelativeLayout>
                         </RelativeLayout>
@@ -287,15 +287,14 @@
                                 android:layout_centerInParent="true">
 
                                 <ImageView
+                                    android:id="@+id/img_aatm"
                                     android:layout_width="88dp"
                                     android:layout_height="53dp"
-                                    android:id="@+id/img_aatm"
                                     android:layout_centerHorizontal="true"
                                     android:contentDescription="@string/image"
                                     android:src="@drawable/matm_icon" />
 
                                 <TextView
-                                    android:textSize="@dimen/marign18sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/img_aatm"
@@ -303,7 +302,8 @@
                                     android:layout_marginTop="@dimen/marign10dp"
                                     android:fontFamily="@font/lato_bold"
                                     android:text="@string/mAtm"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/marign18sp" />
 
 
                             </RelativeLayout>
