--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -7,15 +7,21 @@
     <data>
 
         <variable
-            name="addmoneyviewmodel"
-            type="com.example.spidpay.ui.spwallet.AddMoneyViewModel" />
+            name="totalamount"
+            type="String" />
+
+        <variable
+            name="transfermoney"
+            type="com.example.spidpay.ui.tradewallet.TradeTransferMoneyViewModel" />
+
+
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#10D1D1D1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#10D1D1D1"
         tools:context=".ui.tradewallet.TransferMoneyActivity">
 
         <androidx.cardview.widget.CardView
@@ -94,7 +100,7 @@
                 android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginEnd="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="@string/totalbalnce"
+                android:text="@{`₹ `+totalamount}"
                 android:textColor="@color/green" />
 
 
@@ -130,7 +136,8 @@
                 android:layout_height="75dp"
                 android:layout_marginStart="@dimen/marign20dp"
                 android:layout_weight="1"
-                android:background="@drawable/trade_wallet_green"
+                android:background="@{transfermoney.spidpaywallet ? @drawable/trade_wallet_green : @drawable/trade_wallet_grey,default=@drawable/trade_wallet_green}"
+                android:onClick="@{()->transfermoney.onSpidPayWalletClick()}"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -148,7 +155,8 @@
                 android:layout_width="@dimen/marign100dp"
                 android:layout_height="75dp"
                 android:layout_weight="1"
-                android:background="@drawable/trade_wallet_grey"
+                android:background="@{transfermoney.paytmwallet ? @drawable/trade_wallet_green : @drawable/trade_wallet_grey}"
+                android:onClick="@{()->transfermoney.onPaytmClick()}"
                 app:layout_constraintEnd_toStartOf="@+id/bank_transfer"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/sp_wallet"
@@ -163,18 +171,20 @@
             </RelativeLayout>
 
             <RelativeLayout
+
                 android:id="@+id/bank_transfer"
                 android:layout_width="@dimen/marign100dp"
                 android:layout_height="75dp"
                 android:layout_marginEnd="@dimen/marign20dp"
-                android:background="@drawable/trade_wallet_grey"
+                android:background="@{transfermoney.bank ? @drawable/trade_wallet_green : @drawable/trade_wallet_grey}"
+                android:onClick="@{()->transfermoney.onBankClick()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:layout_width="82dp"
-                    android:layout_height="78dp"
+                    android:layout_width="68dp"
+                    android:layout_height="65dp"
                     android:layout_centerInParent="true"
                     android:src="@drawable/ic_bank" />
 
@@ -205,7 +215,9 @@
             android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:buttonTint="@color/green"
+            android:checked="@{transfermoney.total_amount, default=true}"
             android:fontFamily="@font/lato_bold"
+            android:onClick="@{()->transfermoney.onTotalAmountClick()}"
             android:text="@string/fullamount"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_amount_detail" />
@@ -216,7 +228,9 @@
             android:layout_marginStart="@dimen/marign40dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:buttonTint="@color/green"
+            android:checked="@{transfermoney.other_amount}"
             android:fontFamily="@font/lato_bold"
+            android:onClick="@{()->transfermoney.onOtherAmountClick()}"
             android:text="@string/otheramount"
             app:layout_constraintLeft_toRightOf="@+id/rb_full_amount"
             app:layout_constraintTop_toBottomOf="@+id/tv_amount_detail" />
@@ -249,10 +263,13 @@
                 android:layout_marginBottom="@dimen/marign10dp"
                 android:layout_toEndOf="@+id/tv_transfer_amount"
                 android:background="@drawable/transfer_money_bg"
+                android:enabled="@{transfermoney.total_amount ? false : true}"
+                android:importantForAutofill="no"
+                android:inputType="number"
                 android:paddingStart="@dimen/marign10dp"
                 android:paddingTop="@dimen/marign10dp"
                 android:paddingBottom="@dimen/marign10dp"
-                android:text="21000" />
+                android:text="@={transfermoney.enteramount}" />
 
         </RelativeLayout>
 
@@ -270,7 +287,7 @@
                 android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="@string/transfer_amount"
+                android:text="@string/servicecharge"
                 android:textColor="@color/black"
                 app:layout_constraintHorizontal_chainStyle="spread" />
 
@@ -288,6 +305,7 @@
         </RelativeLayout>
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -300,8 +318,19 @@
             android:text="@string/submit"
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
+            android:onClick="@{(v)->transfermoney.onSubmitClick(v)}"
             app:layout_constraintTop_toBottomOf="@+id/relative_service_charger" />
 
+
+        <ProgressBar
+            android:id="@+id/pb_transfer_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
