--- a/app/src/main/res/layout/activity_payment_successful.xml
+++ b/app/src/main/res/layout/activity_payment_successful.xml
@@ -4,9 +4,6 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,8 +12,6 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/carview_header"
-            card_view:cardElevation="10dp"
-            card_view:cardPreventCornerOverlap="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipChildren="false"
@@ -24,7 +19,9 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="0.0px"
             android:elevation="8dp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            card_view:cardElevation="10dp"
+            card_view:cardPreventCornerOverlap="false">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -104,85 +101,142 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             android:id="@+id/constraint_layout_success_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marign15dp"
             android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginRight="@dimen/marign15dp"
+            android:background="@drawable/all_transaction_bg"
             android:paddingTop="@dimen/marign20dp"
             android:paddingBottom="@dimen/marign20dp"
-            android:layout_marginLeft="@dimen/marign15dp"
-            android:layout_marginRight="@dimen/marign15dp"
-            app:layout_constraintTop_toBottomOf="@+id/payment_successful"
-            android:layout_width="match_parent"
-            android:background="@drawable/all_transaction_bg"
-            android:layout_height="wrap_content">
+            app:layout_constraintTop_toBottomOf="@+id/payment_successful">
 
             <TextView
                 android:id="@+id/tv_reqestmoney1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
+                android:text="@string/reqestmoney1"
                 android:textColor="@color/black"
                 android:textSize="@dimen/marign18sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:text="@string/reqestmoney1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_reqestmoney2"
-                app:layout_constraintTop_toBottomOf="@+id/tv_reqestmoney1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
                 android:textColor="@color/green"
                 android:textSize="@dimen/marign18sp"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_reqestmoney1" />
 
 
             <TextView
                 android:id="@+id/reqestmoney3"
-                app:layout_constraintTop_toBottomOf="@+id/tv_reqestmoney2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
+                android:text="@string/reqestmoney2"
                 android:textColor="@color/black"
                 android:textSize="@dimen/marign18sp"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:text="@string/reqestmoney2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_reqestmoney2" />
 
 
             <TextView
-                android:gravity="center"
-                android:paddingEnd="@dimen/marign20dp"
-                android:paddingStart="@dimen/marign20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign20dp"
-                app:layout_constraintTop_toBottomOf="@+id/reqestmoney3"
+                android:layout_marginEnd="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
+                android:gravity="center"
+                android:paddingStart="@dimen/marign20dp"
+                android:paddingEnd="@dimen/marign20dp"
+                android:text="@string/reqestmoney3"
                 android:textColor="@color/black"
                 android:textSize="@dimen/marign18sp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginStart="@dimen/marign20dp"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:text="@string/reqestmoney3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/reqestmoney3" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_layout_transfer_money"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marign15dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginRight="@dimen/marign15dp"
+            android:background="@drawable/all_transaction_bg"
+            android:paddingTop="@dimen/marign20dp"
+            android:paddingBottom="@dimen/marign20dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_success_1">
+
+            <TextView
+                android:id="@+id/tv_reqesttransfermoney_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/transfermoney1"
+                android:textColor="@color/black"
+                android:textSize="@dimen/marign18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_reqesttransfermoney_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:textColor="@color/green"
+                android:textSize="@dimen/marign18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_reqesttransfermoney_1" />
+
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/tv_reqesttransfermoney_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/transfermoney2"
+                android:textColor="@color/black"
+                android:textSize="@dimen/marign18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_reqesttransfermoney_2" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
         <Button
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_success_1"
-           android:id="@+id/btn_backtohome"
+            android:id="@+id/btn_backtohome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
@@ -192,12 +246,10 @@
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:text="@string/backtohome"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
-             />
-
-
-
+            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_transfer_money" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
