--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-            <variable
-                name="changepasswordviewmodel"
-                type="com.example.spidpay.ui.changepassword.ChangePasswordViewModel" />
+
+        <variable
+            name="changepasswordviewmodel"
+            type="com.example.spidpay.ui.changepassword.ChangePasswordViewModel" />
     </data>
 
     <RelativeLayout
@@ -43,58 +44,60 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/old_password"
+                android:id="@+id/txtinput_login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign15dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
-                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_old_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
+                    android:gravity="center_vertical"
                     android:hint="@string/oldpassword"
-                    android:inputType="text"
-                    android:text="@={changepasswordviewmodel.string_old_password}"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
                     android:paddingStart="@dimen/marign15dp"
                     android:paddingEnd="@dimen/marign10dp"
+                    android:text="@={changepasswordviewmodel.string_old_password}"
                     app:hintEnabled="false" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign15dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                app:endIconMode="password_toggle"
                 app:hintEnabled="false"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
-                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
+                    android:gravity="center_vertical"
                     android:hint="@string/newpassword"
-                    android:text="@={changepasswordviewmodel.string_new_password}"
-                    android:inputType="text"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
                     android:paddingStart="@dimen/marign15dp"
-
                     android:paddingEnd="@dimen/marign10dp"
+                    android:text="@={changepasswordviewmodel.string_new_password}"
                     app:hintEnabled="false" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -103,27 +106,28 @@
                 android:id="@+id/confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign15dp"
+                android:layout_marginEnd="@dimen/marign20dp"
+                app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
-                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
+                    android:gravity="center_vertical"
                     android:hint="@string/confirmpassword"
-                    android:inputType="text"
-                    android:text="@={changepasswordviewmodel.string_confirm_password}"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
                     android:paddingStart="@dimen/marign15dp"
-
                     android:paddingEnd="@dimen/marign10dp"
+                    android:text="@={changepasswordviewmodel.string_confirm_password}"
                     app:hintEnabled="false" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -135,10 +139,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign15dp"
                 android:layout_marginTop="@dimen/marign20dp"
-                android:onClick="@{(v)->changepasswordviewmodel.validateChangePassField(v)}"
                 android:layout_marginEnd="@dimen/marign15dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
+                android:onClick="@{(v)->changepasswordviewmodel.validateChangePassField(v)}"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
@@ -147,11 +151,11 @@
         </LinearLayout>
 
         <ProgressBar
-            android:layout_centerInParent="true"
-            android:visibility="gone"
             android:id="@+id/pb_change_password"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
     </RelativeLayout>
 </layout>
