--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -266,29 +266,31 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/linear_signup_password"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linear_signup_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign15dp"
                 android:layout_marginEnd="@dimen/marign20dp"
+                app:endIconMode="password_toggle"
                 app:hintEnabled="false"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linear_signup_email"
                 app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                app:passwordToggleEnabled="true">
+                >
 
                 <androidx.appcompat.widget.AppCompatEditText
+                    android:gravity="center_vertical"
+                    android:maxLength="20"
                     android:id="@+id/edt_loginpassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
                     android:hint="@string/password"
                     android:text="@={register_viewmodel.password}"
-                    android:inputType="text"
+                    android:inputType="textPassword"
                     android:singleLine="true"
                     android:paddingStart="@dimen/marign15dp"
-                    android:paddingTop="@dimen/marign10dp"
                     android:paddingEnd="@dimen/marign10dp"
                     app:hintEnabled="false" />
 
@@ -306,7 +308,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_password"
                 app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                app:passwordToggleEnabled="true">
+                app:endIconMode="password_toggle">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_signup_confirm_password"
@@ -314,10 +316,11 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
                     android:hint="@string/confirmpassword"
-                    android:inputType="text"
+
+                    android:inputType="textPassword"
                     android:paddingStart="@dimen/marign15dp"
                     android:singleLine="true"
-                    android:paddingTop="@dimen/marign10dp"
+
                     android:paddingEnd="@dimen/marign10dp"
                     android:text="@={register_viewmodel.confirm_password}"
                     app:hintEnabled="false" />
