--- a/app/src/main/res/layout/update_company_detail.xml
+++ b/app/src/main/res/layout/update_company_detail.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <import type="android.view.View"/>
+        <import type="com.example.spidpay.util.Constant"/>
+
         <variable
             name="company"
             type="com.example.spidpay.data.response.CompanyReponse" />
@@ -83,6 +86,8 @@
             android:importantForAutofill="no" />
 
         <EditText
+            android:visibility="@{company.companyType.description.equals(Constant.SOLE_OWNER) ? View.VISIBLE : View.GONE , default=gone}"
+
             android:id="@+id/edt_edit_udyog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,6 +108,9 @@
             android:importantForAutofill="no" />
 
         <EditText
+
+            android:visibility="@{company.companyType.description.equals(Constant.PARTNERSHIP) ? View.VISIBLE : View.GONE , default=gone}"
+
             android:id="@+id/edt_edit_partnership"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -124,6 +132,9 @@
 
 
         <EditText
+
+            android:visibility="@{company.companyType.description.equals(Constant.PRIVATE_LIMITED) ? View.VISIBLE : View.GONE , default=gone}"
+
             android:id="@+id/edt_edit_moa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -144,6 +155,9 @@
             android:importantForAutofill="no" />
 
         <EditText
+
+            android:visibility="@{company.companyType.description.equals(Constant.PRIVATE_LIMITED) ? View.VISIBLE : View.GONE , default=gone}"
+
             android:id="@+id/edt_edit_coi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -164,6 +178,8 @@
             android:importantForAutofill="no" />
 
         <EditText
+
+            android:visibility="@{company.companyType.description.equals(Constant.PRIVATE_LIMITED) ? View.VISIBLE : View.GONE , default=gone}"
             android:id="@+id/edt_edit_declration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -184,6 +200,7 @@
             android:importantForAutofill="no" />
 
         <EditText
+
             android:maxLength="15"
             android:id="@+id/edt_edit_gstno"
             android:layout_width="match_parent"
