--- a/app/src/main/res/layout/fragment_bank_g_s_t.xml
+++ b/app/src/main/res/layout/fragment_bank_g_s_t.xml
@@ -64,7 +64,6 @@
             app:layout_constraintLeft_toRightOf="@+id/tv_user_acc_number"
             app:layout_constraintTop_toBottomOf="@+id/tv_bank_Deatil" />
 
-
         <TextView
             android:id="@+id/tv_acc_holder_name"
             android:layout_width="wrap_content"
@@ -76,7 +75,6 @@
             android:textColor="@color/black"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_user_acc_number" />
-
 
         <TextView
             android:id="@+id/tv_acc_holder_name_value"
@@ -115,6 +113,30 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_acc_holder_name" />
 
         <TextView
+            android:id="@+id/tv_user_branch_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign5dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/branchname"
+            android:textColor="@color/black"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_user_bank_name" />
+
+        <TextView
+            android:id="@+id/tv_user_branch_name_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign5dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@{bankinfo.companyType.description}"
+            android:textColor="@color/black"
+            app:layout_constraintLeft_toRightOf="@+id/tv_user_branch_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_user_bank_name" />
+
+        <TextView
             android:id="@+id/tv_user_bank_ifsccode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -124,7 +146,7 @@
             android:text="@string/ifsccode1"
             android:textColor="@color/black"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_user_bank_name" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_user_branch_name" />
 
         <TextView
             android:id="@+id/tv_user_bank_name_ifsccode_value"
