--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#021477</color>
+    <color name="purple_200">#271A61</color>
     <color name="welcome_txt_color">#586F8F</color>
     <color name="black">#FF000000</color>
     <color name="red">#FF0000</color>
@@ -12,6 +12,8 @@
     <color name="botton_nav_inactive_color">#4E4E4E</color>
     <color name="termsncondtion">#4483EE</color>
     <color name="darkgrey">#A9A9A9</color>
+    <color name="darkgrey2">#8E8A90</color>
+
     <color name="lightgrey">#D1D1D1</color>
     <color name="border_color">#50D1D1D1</color>
     <color name="shadeslightgrey">#30DCDCDC</color>
@@ -20,10 +22,11 @@
     <color name="navitem_color">#7E7776</color>
     <color name="seagreen">#28B463</color>
     <color name="dark_blue">#542DC0</color>
+    <color name="dark_blue_extra">#2C2CC0</color>
     <color name="light_green">#2CC053</color>
     <color name="welcome_green_1">#D3FFDF</color>
     <color name="welcome_green_2">#2AC052</color>
-    <color name="forgot_password_Txtcolor">#6D51C3</color>
+    <color name="forgot_password_Txtcolor">#887BDC</color>
     <color name="page_heading_color">#181461</color>
     <color name="password_eye_color">#B5B5B5</color>
     <!-- dots inactive colors -->
