--- a/app/src/main/res/layout/forgotpasswordlayout.xml
+++ b/app/src/main/res/layout/forgotpasswordlayout.xml
@@ -89,6 +89,7 @@
             android:fontFamily="@font/lato"
             android:onClick="@{(v)->loginviewmodel.validate_Forgot_Password_Field(v)}"
             android:text="@string/txtcontinue"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
             app:layout_constraintTop_toBottomOf="@+id/txtinput_forgot_confirm_password" />
