--- a/app/src/main/res/layout/verifyotpdialog.xml
+++ b/app/src/main/res/layout/verifyotpdialog.xml
@@ -51,6 +51,7 @@
 
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
