--- a/app/src/main/res/layout/fragment_bank_g_s_t.xml
+++ b/app/src/main/res/layout/fragment_bank_g_s_t.xml
@@ -158,7 +158,7 @@
             android:text="@{bankinfo.ifscCode}"
             android:textColor="@color/black"
             app:layout_constraintLeft_toRightOf="@+id/tv_user_bank_ifsccode"
-            app:layout_constraintTop_toBottomOf="@+id/tv_user_bank_name" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_user_branch_name" />
 
         <ProgressBar
             android:visibility="gone"
