--- a/app/src/main/res/layout/update_bank_detail.xml
+++ b/app/src/main/res/layout/update_bank_detail.xml
@@ -92,7 +92,7 @@
             android:layout_marginTop="@dimen/marign10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
-            android:hint="@string/bankname"
+            android:hint="@string/bankname1"
             android:inputType="text"
             android:paddingLeft="@dimen/marign10dp"
             android:paddingTop="@dimen/marign10dp"
@@ -106,15 +106,13 @@
             android:importantForAutofill="no" />
 
         <EditText
-            android:focusable="false"
-            android:cursorVisible="false"
             android:id="@+id/edt_user_branch_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/marign10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
-            android:hint="@string/branchname"
+            android:hint="@string/branchname1"
             android:inputType="text"
             android:paddingLeft="@dimen/marign10dp"
             android:paddingTop="@dimen/marign10dp"
