--- a/app/src/main/res/layout/verifyusername.xml
+++ b/app/src/main/res/layout/verifyusername.xml
@@ -52,6 +52,7 @@
 
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
